--- a/public/assets/css/default-style.css
+++ b/public/assets/css/default-style.css
@@ -1,6 +1,56 @@
+/* Estilos personalizados */
+
+html, body {
+    height: 100%;
+    margin: 0;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    background-color: #f8f9fa;
+}
+
+.main-container, .profile-container, .content-container {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 20px;
+    padding-bottom: 100px; /* Espaço para o rodapé */
+    margin-top: 70px; /* Adicionado para espaçamento superior */
+}
+
+.full-width-container {
+    width: 100%;
+}
+
+.card {
+    border-radius: 10px;
+    padding: 20px;
+    width: 100%;
+    max-width: 500px; /* Largura máxima do card */
+}
+
+h2 {
+    color: #343a40;
+}
+
+.alert {
+    margin-bottom: 20px;
+}
+
+footer {
+    width: 100%;
+    box-shadow: 4px 4px 4px 4px rgba(0, 0, 0, 0.5);
+    background-color: #f8f9fa;
+    text-align: center;
+    padding: 10px 0;
+    margin-top: auto;
+}
+
 .profile-container {
     max-width: 600px;
-    margin: 0 auto;
     padding: 20px;
     border: 1px solid #ddd;
     border-radius: 8px;
@@ -29,7 +79,7 @@
     font-weight: bold;
 }
 
-.user-details input {
+.user-details input, .user-details select {
     padding: 8px;
     border: 1px solid #ccc;
     border-radius: 4px;
@@ -59,4 +109,9 @@ a {
 
 a:hover {
     text-decoration: underline;
+}
+
+.destaque-zoom:hover {
+    transform: scale(1.07);
+    transition: transform 0.6s;
 }
