--- a/public/assets/css/default-style.css
+++ b/public/assets/css/default-style.css
@@ -11,7 +11,7 @@ body {
     background-color: #f8f9fa;
 }
 
-.main-container, .profile-container, .content-container {
+.main-container, .content-container {
     flex: 1;
     display: flex;
     justify-content: center;
@@ -23,6 +23,7 @@ body {
 
 .full-width-container {
     width: 100%;
+    margin-top: 70px; /* Adicionado para espaçamento superior */
 }
 
 .card {
@@ -51,10 +52,15 @@ footer {
 
 .profile-container {
     max-width: 600px;
+    margin: 70px auto 0 auto; /* Adicionado para espaçamento superior */
     padding: 20px;
     border: 1px solid #ddd;
     border-radius: 8px;
     background-color: #f9f9f9;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .user-image {
