--- a/public/assets/css/default-style.css
+++ b/public/assets/css/default-style.css
@@ -1,66 +1,21 @@
-/* Estilos personalizados */
-
-html, body {
-    height: 100%;
-    margin: 0;
+/* Definir uma altura fixa para a barra de navegação */
+.navbar {
+    height: 110px; /* ou qualquer altura que você tenha configurado para a barra de navegação */
 }
 
-body {
-    display: flex;
-    flex-direction: column;
-    background-color: #f8f9fa;
+/* Adicionar margem superior ao conteúdo principal para evitar sobreposição com a barra de navegação */
+.main-content {
+    margin-top: 110px; /* igual à altura da barra de navegação */
 }
 
-.main-container, .content-container {
-    flex: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-top: 20px;
-    padding-bottom: 100px; /* Espaço para o rodapé */
-    margin-top: 70px; /* Adicionado para espaçamento superior */
-}
-
-.full-width-container {
-    width: 100%;
-    margin-top: 70px; /* Adicionado para espaçamento superior */
-}
-
-.card {
-    border-radius: 10px;
-    padding: 20px;
-    width: 100%;
-    max-width: 500px; /* Largura máxima do card */
-}
-
-h2 {
-    color: #343a40;
-}
-
-.alert {
-    margin-bottom: 20px;
-}
-
-footer {
-    width: 100%;
-    box-shadow: 4px 4px 4px 4px rgba(0, 0, 0, 0.5);
-    background-color: #f8f9fa;
-    text-align: center;
-    padding: 10px 0;
-    margin-top: auto;
-}
-
+/* Outros estilos existentes */
 .profile-container {
     max-width: 600px;
-    margin: 70px auto 0 auto; /* Adicionado para espaçamento superior */
+    margin: 0 auto;
     padding: 20px;
     border: 1px solid #ddd;
     border-radius: 8px;
     background-color: #f9f9f9;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
 }
 
 .user-image {
@@ -117,7 +72,48 @@ a:hover {
     text-decoration: underline;
 }
 
-.destaque-zoom:hover {
-    transform: scale(1.07);
-    transition: transform 0.6s;
+/* Estilos personalizados */
+
+html, body {
+    height: 100%;
+    margin: 0;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    background-color: #f8f9fa;
+}
+
+.main-container {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 20px;
+    padding-bottom: 100px; /* Espaço para o rodapé */
+}
+
+.card {
+    border-radius: 10px;
+    padding: 20px;
+    width: 100%;
+    max-width: 500px; /* Largura máxima do card */
+}
+
+h2 {
+    color: #343a40;
+}
+
+.alert {
+    margin-bottom: 20px;
+}
+
+footer {
+    width: 100%;
+    box-shadow: 4px 4px 4px 4px rgba(0, 0, 0, 0.5);
+    background-color: #f8f9fa;
+    text-align: center;
+    padding: 10px 0;
+    margin-top: auto;
 }
