--- a/public/assets/css/default-style.css
+++ b/public/assets/css/default-style.css
@@ -48,7 +48,7 @@
     box-sizing: border-box;
 }
 
-button[type="submit"] {
+/* button[type="submit"] {
     padding: 10px 20px;
     background-color: #4CAF50;
     color: white;
@@ -59,7 +59,7 @@ button[type="submit"] {
 
 button[type="submit"]:hover {
     background-color: #45a049;
-}
+} */
 
 a {
     display: inline-block;
